🔼Updated: main list components edit

--- a/backend/apps/sanatorium/templates/sanatorium/doctors/base.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/base.html
@@ -55,7 +55,7 @@
                   <a class="dropdown-item" tabindex="-1" href="#">Прием дежурного врача</a>
                   <a class="dropdown-item" tabindex="-1" href="#">ЭКГ (Электрокардиограмма)</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" tabindex="-1" href="#">Заключительный прием лечащего врача</a>
+                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:final_appointment_page' ill_his.id %}">Заключительный прием лечащего врача</a>
                 </div>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
@@ -93,26 +93,26 @@
                     <i class="far fa-bell"></i>
                     <span class="badge badge-warning navbar-badge">15</span>
                 </a>
-                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <span class="dropdown-item dropdown-header">15 Notifications</span>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-envelope mr-2"></i> 4 new messages
-                        <span class="float-right text-muted text-sm">3 mins</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-users mr-2"></i> 8 friend requests
-                        <span class="float-right text-muted text-sm">12 hours</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-file mr-2"></i> 3 new reports
-                        <span class="float-right text-muted text-sm">2 days</span>
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-                </div>
+{#                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">#}
+{#                    <span class="dropdown-item dropdown-header">15 Notifications</span>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a href="#" class="dropdown-item">#}
+{#                        <i class="fas fa-envelope mr-2"></i> 4 new messages#}
+{#                        <span class="float-right text-muted text-sm">3 mins</span>#}
+{#                    </a>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a href="#" class="dropdown-item">#}
+{#                        <i class="fas fa-users mr-2"></i> 8 friend requests#}
+{#                        <span class="float-right text-muted text-sm">12 hours</span>#}
+{#                    </a>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a href="#" class="dropdown-item">#}
+{#                        <i class="fas fa-file mr-2"></i> 3 new reports#}
+{#                        <span class="float-right text-muted text-sm">2 days</span>#}
+{#                    </a>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>#}
+{#                </div>#}
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-widget="fullscreen" href="#" role="button">
@@ -211,6 +211,15 @@
 
         //Date picker
         $('#reservationdate').datetimepicker({
+            format: 'DD/MM/YYYY'
+        });
+        $('#lab_reservationdate').datetimepicker({
+            format: 'DD/MM/YYYY'
+        });
+        $('#proc_reservationdate').datetimepicker({
+            format: 'DD/MM/YYYY'
+        });
+        $('#pills_reservationdate').datetimepicker({
             format: 'DD/MM/YYYY'
         });
 
