--- a/backend/apps/sanatorium/templates/sanatorium/doctors/components/consulting-treatment-program-card.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/components/consulting-treatment-program-card.html
@@ -61,8 +61,8 @@
                                 {{ lab.created_by.full_name }}
                             </td>
                             <td class="project-actions text-right">
-                                <a class="btn btn-info btn-sm" href="#">
-                                    <i class="fas fa-pencil-alt">
+                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:consulting_update' lab.id %}">
+                                    <i class="fas fa-edit">
                                     </i>
                                     Изменить
                                 </a>
@@ -130,13 +130,13 @@
                                             </div>
                                             <div class="form-group">
                                                 <label>Дата начала:</label>
-                                                <div class="input-group date" id="reservationdate"
+                                                <div class="input-group date" id="lab_reservationdate"
                                                      data-target-input="nearest">
                                                     <input name="start_date" type="text"
                                                            class="form-control datetimepicker-input"
-                                                           data-target="#reservationdate"/>
+                                                           data-target="#lab_reservationdate"/>
                                                     <div class="input-group-append"
-                                                         data-target="#reservationdate"
+                                                         data-target="#lab_reservationdate"
                                                          data-toggle="datetimepicker">
                                                         <div class="input-group-text"><i
                                                                 class="fa fa-calendar"></i>
