--- a/backend/apps/sanatorium/templates/sanatorium/doctors/components/pills-injections-card.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/components/pills-injections-card.html
@@ -70,8 +70,8 @@
                                 {{ pill.created_by.full_name }}
                             </td>
                             <td class="project-actions text-right">
-                                <a class="btn btn-info btn-sm" href="#">
-                                    <i class="fas fa-pencil-alt">
+                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:pills_injections_update' pill.id %}">
+                                    <i class="fas fa-edit">
                                     </i>
                                     Изменить
                                 </a>
@@ -128,13 +128,13 @@
                             <div class="form-group">
                                 <label>Дата начала:</label>
                                 <div class="input-group date"
-                                     id="reservationdate"
+                                     id="pills_reservationdate"
                                      data-target-input="nearest">
                                     <input name="start_date" type="text"
                                            class="form-control datetimepicker-input"
-                                           data-target="#reservationdate"/>
+                                           data-target="#pills_reservationdate"/>
                                     <div class="input-group-append"
-                                         data-target="#reservationdate"
+                                         data-target="#pills_reservationdate"
                                          data-toggle="datetimepicker">
                                         <div class="input-group-text"><i
                                                 class="fa fa-calendar"></i>
