🔼Updated: main list components edit

--- a/backend/apps/sanatorium/templates/sanatorium/doctors/pills_injections_update.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/pills_injections_update.html
@@ -110,8 +110,7 @@
                                                               type="text"
                                                               class="form-control"
                                                               id="instruction"
-                                                              value="{{ form.initial.instruction }}"
-                                                              placeholder=""></textarea>
+                                                              placeholder="">{{ form.initial.instruction }}</textarea>
                                                 </div>
 
                                                 <div class="modal-footer justify-content-between">
