--- a/backend/apps/sanatorium/templates/sanatorium/doctors/treatment_procedures_update.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/treatment_procedures_update.html
@@ -91,7 +91,7 @@
                                                               class="form-control"
                                                               id="comments"
                                                               value="{{ form.initial.comments }}"
-                                                              placeholder=""></textarea>
+                                                              placeholder="">{{ form.initial.comments }}</textarea>
                                                 </div>
 
                                                 <div class="modal-footer justify-content-between">
