🔼Updated: main list components edit

--- a/backend/apps/sanatorium/templates/sanatorium/doctors/base.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/base.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="{% url 'sanatorium_doctors:main_screen' %}" class="nav-link">Пациенты</a>
+                <a href="{% url 'sanatorium_doctors:assigned_patients' %}" class="nav-link">Пациенты</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
