--- a/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/sidebar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/sidebar.html
@@ -153,7 +153,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../calendar.html" class="nav-link {{ active_page.timetable_page }}">
+                    <a href="#" class="nav-link {{ active_page.timetable_page }}">
                         <i class="nav-icon far fa-calendar-alt"></i>
                         <p>
                             Расписание лечения
