--- a/backend/apps/sanatorium/templates/sanatorium/doctors/base.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/base.html
@@ -48,7 +48,7 @@
                   Создать <span class="caret"></span>
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" tabindex="-1" href="#">Консультация кардиолога первичная</a>
+                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:cardiologist_appointment_page' ill_his.id %}">Консультация кардиолога первичная</a>
                   <a class="dropdown-item" tabindex="-1" href="#">Консультация невролога первичная</a>
                   <a class="dropdown-item" tabindex="-1" href="#">Осмотр дежурного врача при поступлении</a>
                   <a class="dropdown-item" tabindex="-1" href="#">Повторный приём лечащего врача</a>
