--- a/backend/apps/sanatorium/templates/sanatorium/doctors/components/consulting-treatment-program-card.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/components/consulting-treatment-program-card.html
@@ -60,8 +60,9 @@
                             <td>
                                 {{ lab.created_by.full_name }}
                             </td>
+                        {% with current_url=request.get_full_path %}
                             <td class="project-actions text-right">
-                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:consulting_update' lab.id %}">
+                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:consulting_update' lab.id %}?next={{ current_url }}">
                                     <i class="fas fa-edit">
                                     </i>
                                     Изменить
@@ -72,6 +73,7 @@
                                     Удалить
                                 </a>
                             </td>
+                        {% endwith %}
                         </tr>
                     {% endfor %}
                     </tbody>
