--- a/backend/apps/sanatorium/templates/sanatorium/doctors/components/pills-injections-card.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/components/pills-injections-card.html
@@ -69,8 +69,9 @@
                             <td>
                                 {{ pill.created_by.full_name }}
                             </td>
+                        {% with current_url=request.get_full_path %}
                             <td class="project-actions text-right">
-                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:pills_injections_update' pill.id %}">
+                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:pills_injections_update' pill.id %}?next={{ current_url }}">
                                     <i class="fas fa-edit">
                                     </i>
                                     Изменить
@@ -81,6 +82,7 @@
                                     Удалить
                                 </a>
                             </td>
+                        {% endwith %}
                         </tr>
                     {% endfor %}
                     </tbody>
