--- a/backend/apps/sanatorium/templates/sanatorium/doctors/components/treatment-procedure-card.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/components/treatment-procedure-card.html
@@ -84,8 +84,9 @@
                             <td>
                                 {{ proc.created_by.full_name }}
                             </td>
+                        {% with current_url=request.get_full_path %}
                             <td class="project-actions text-right">
-                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:treatment_procedure_update' proc.id %}">
+                                <a class="btn btn-info btn-sm" href="{% url 'sanatorium_doctors:treatment_procedure_update' proc.id %}?next={{ current_url }}">
                                     <i class="fas fa-edit">
                                     </i>
                                     Изменить
@@ -97,6 +98,7 @@
                                 </a>
                             </td>
                         </tr>
+                        {% endwith %}
                     {% endfor %}
                     </tbody>
                 </table>
