--- a/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/sidebar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/sidebar.html
@@ -76,14 +76,21 @@
                         </p>
                     </a>
                     <ul class="nav nav-treeview">
-                        {% for consulting in consultings_n_appointments %}
+                        {% for consulting in cardiologist_appointments %}
                             <li class="nav-item">
-                                <a href="../layout/top-nav.html" class="nav-link">
+                                <a href="{% url 'sanatorium_doctors:cardiologist_appointment_page' ill_his.id %}" class="nav-link">
                                     <i class="far"></i>
-                                    <p>Консультации и исследования</p>
+                                    <p>Консультация кардиолога | {{ consulting.created_at }}</p>
                                 </a>
                             </li>
                         {% endfor %}
+                        <div class="dropdown-divider"></div>
+                        <li class="nav-item">
+                            <a href="{% url 'sanatorium_doctors:final_appointment_page' ill_his.id %}" class="nav-link">
+                                <i class="far"></i>
+                                <p>Заключительный прием | {{ final_appointment.created_at }}</p>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item">
