🔼Updated: appointments all

--- a/backend/apps/sanatorium/templates/sanatorium/doctors/main_screen.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/main_screen.html
@@ -34,6 +34,18 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
+
+
+
+        {% if messages %}
+            <div class="alert alert-danger">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+
+
         <!-- Content Header (Page header) -->
         <br>
         <!-- Main content -->
