--- a/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/sidebar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/sidebar.html
@@ -76,72 +76,141 @@
                         </p>
                     </a>
                     <ul class="nav nav-treeview">
-                        {% for consulting in cardiologist_appointments %}
-                            <li class="nav-item">
-                                <a href="{% url 'sanatorium_doctors:cardiologist_appointment_page' ill_his.id %}" class="nav-link">
-                                    <i class="far"></i>
-                                    <p>Консультация кардиолога | {{ consulting.created_at }}</p>
-                                </a>
-                            </li>
-                        {% endfor %}
-                        {% if neurologist_appointments %}
-                            <div class="dropdown-divider"></div>
-                            {% for consulting in neurologist_appointments %}
-                                <li class="nav-item">
-                                    <a href="{% url 'sanatorium_doctors:neurologist_appointment_page' ill_his.id %}" class="nav-link">
-                                        <i class="far"></i>
-                                        <p>Консультация невролога | {{ consulting.created_at }}</p>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        {% endif %}
-
-                        {% if on_arrival_appointments %}
-                            <div class="dropdown-divider"></div>
-                            {% for consulting in on_arrival_appointments %}
-                                <li class="nav-item">
-                                    <a href="{% url 'sanatorium_doctors:on_arrival_appointment_page' ill_his.id %}" class="nav-link">
-                                        <i class="far"></i>
-                                        <p>Осмотр дежурного врача при поступлении | {{ consulting.created_at }}</p>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        {% endif %}
-                        {% if repeated_appointments %}
-                            <div class="dropdown-divider"></div>
-                            {% for consulting in repeated_appointments %}
-                                <li class="nav-item">
-                                    <a href="{% url 'sanatorium_doctors:update_repeated_appointments_page' consulting.id %}" class="nav-link">
-                                        <i class="far"></i>
-                                        <p>Повторный приём лечащего врача | {{ consulting.created_at }}</p>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        {% endif %}
-
-                        {% if with_doc_on_duty_appointments %}
-                            <div class="dropdown-divider"></div>
-                            {% for consulting in with_doc_on_duty_appointments %}
-                                <li class="nav-item">
-                                    <a href="{% url 'sanatorium_doctors:update_with_doc_on_duty_appointment_page' consulting.id %}" class="nav-link">
-                                        <i class="far"></i>
-                                        <p>Прием дежурного врача | {{ consulting.created_at }}</p>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        {% endif %}
-
-                        {% if ekg_appointments %}
-                            <div class="dropdown-divider"></div>
-                            {% for consulting in ekg_appointments %}
-                                <li class="nav-item">
-                                    <a href="{% url 'sanatorium_doctors:update_ekg_appointment_page' consulting.id %}" class="nav-link">
-                                        <i class="far"></i>
-                                        <p>ЭКГ (Электрокардиограмма) | {{ consulting.created_at }}</p>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        {% endif %}
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    Консультация кардиолога
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                {% for consulting in cardiologist_appointments %}
+                                    <li class="nav-item">
+                                        <a href="{% url 'sanatorium_doctors:cardiologist_appointment_page' ill_his.id %}"
+                                           class="nav-link">
+                                            <i class="far"></i>
+                                            <p>Консультация кардиолога | {{ consulting.created_at }}</p>
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    Консультация невролога
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                {% if neurologist_appointments %}
+                                    <div class="dropdown-divider"></div>
+                                    {% for consulting in neurologist_appointments %}
+                                        <li class="nav-item">
+                                            <a href="{% url 'sanatorium_doctors:neurologist_appointment_page' ill_his.id %}"
+                                               class="nav-link">
+                                                <i class="far"></i>
+                                                <p>Консультация невролога | {{ consulting.created_at }}</p>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    Осмотр дежурного врача при поступлении
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                {% if on_arrival_appointments %}
+                                    <div class="dropdown-divider"></div>
+                                    {% for consulting in on_arrival_appointments %}
+                                        <li class="nav-item">
+                                            <a href="{% url 'sanatorium_doctors:on_arrival_appointment_page' ill_his.id %}"
+                                               class="nav-link">
+                                                <i class="far"></i>
+                                                <p>Осмотр дежурного врача при поступлении | {{ consulting.created_at }}</p>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    Повторный приём лечащего врача
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                {% if repeated_appointments %}
+                                    <div class="dropdown-divider"></div>
+                                    {% for consulting in repeated_appointments %}
+                                        <li class="nav-item">
+                                            <a href="{% url 'sanatorium_doctors:update_repeated_appointments_page' consulting.id %}"
+                                               class="nav-link">
+                                                <i class="far"></i>
+                                                <p>Повторный приём лечащего врача | {{ consulting.created_at }}</p>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    Прием дежурного врача
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                {% if with_doc_on_duty_appointments %}
+                                    <div class="dropdown-divider"></div>
+                                    {% for consulting in with_doc_on_duty_appointments %}
+                                        <li class="nav-item">
+                                            <a href="{% url 'sanatorium_doctors:update_with_doc_on_duty_appointment_page' consulting.id %}"
+                                               class="nav-link">
+                                                <i class="far"></i>
+                                                <p>Прием дежурного врача | {{ consulting.created_at }}</p>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>
+                                    ЭКГ (Электрокардиограмма)
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                {% if ekg_appointments %}
+                                    <div class="dropdown-divider"></div>
+                                    {% for consulting in ekg_appointments %}
+                                        <li class="nav-item">
+                                            <a href="{% url 'sanatorium_doctors:update_ekg_appointment_page' consulting.id %}"
+                                               class="nav-link">
+                                                <i class="far"></i>
+                                                <p>ЭКГ (Электрокардиограмма) | {{ consulting.created_at }}</p>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                {% endif %}
+                            </ul>
+                        </li>
 
                         <div class="dropdown-divider"></div>
                         <li class="nav-item">
